fixbug: no skeleton visible

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -195,7 +195,7 @@ a {
   margin-top: 7px;
   width: var(--width, 118px);
   height: 4px;
-  color: #000958;
+  background: #000958;
   border-radius: 10px;
   opacity: 0.08;
 }
